Fixed layout bug

--- a/htdocs/themes/default/css/amp.css
+++ b/htdocs/themes/default/css/amp.css
@@ -26,7 +26,6 @@ article .figure { display: inline-block; font-size: 0.8em; }
 article .figure img { margin: 0; width: 100%; max-width: 100%; }
 article .figure .figcaption { display: block; padding: 0.5em 0; border-bottom: 1px solid; color: #666666; }
 article + article { margin-top: 2em; border-top: 1px solid #eee; }
-article ul, article ol { overflow: hidden; }
 article ul.task-list, article ol.task-list { list-style: none; }
 article blockquote { color: #666666; margin-left: 1em; }
 article blockquote p { white-space: pre-line; }
