--- a/htdocs/themes/default/sass/_article.scss
+++ b/htdocs/themes/default/sass/_article.scss
@@ -52,7 +52,6 @@ article {
     border-top: 1px solid #eee;
   }
   ul, ol {
-    overflow: hidden;
     &.task-list {
       list-style: none;
     }
